--- a/src/pages/AskoldPage/AskoldPage.module.css
+++ b/src/pages/AskoldPage/AskoldPage.module.css
@@ -18,16 +18,25 @@
     margin-top: 75px;
     padding-bottom: 130px;
     margin-bottom: 100px;
+    
+}
+@media only screen and (min-width: 768px) {
+    .mainAskoldSection {
+        position: relative;
+        padding-top: 70px;
+        padding-bottom: 100px;
+    }
 }
 .askoldLogoImg {
     margin-bottom: 30px;
 }
 @media only screen and (min-width: 768px) {
-    .mainAskoldSection {
-        padding-bottom: 0px;
-        margin-bottom: 60px;
-        margin-top: 0;
-    }
+.askoldLogoImg{
+    width: 261px;
+    position: absolute;
+    top: -40px;
+    left: 0;
+}
 }
 
 @media only screen and (min-width: 1024px) {
@@ -136,4 +145,10 @@
 
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media only screen and (min-width: 768px) {
+    .askoldTextWrap {
+    margin-left: 270px;
+    margin-right: 10px;
+}
 }
