--- a/src/pages/AskoldPage/AskoldPage.module.css
+++ b/src/pages/AskoldPage/AskoldPage.module.css
@@ -45,8 +45,8 @@
 }
 @media only screen and (min-width: 1024px) {
     .mainAskoldSection {
-        padding-top: 120px;
-        padding-bottom: 120px;
+        padding-top: 150px;
+        padding-bottom: 220px;
     }
 }
 
@@ -70,6 +70,8 @@
 @media only screen and (min-width: 1024px) {
     .askoldText {
         font-size: 22px;
+        line-height: 1.5;
+        margin-bottom: 25px;
     }
 }
 
