--- a/src/pages/AskoldPage/AskoldPage.module.css
+++ b/src/pages/AskoldPage/AskoldPage.module.css
@@ -43,6 +43,11 @@
         width: 350px;       
     }
 }
+@media only screen and (min-width: 1440px) {
+    .askoldLogoImg {
+    left: 150px;
+    }
+}
 @media only screen and (min-width: 1024px) {
     .mainAskoldSection {
         padding-top: 200px;
@@ -52,8 +57,8 @@
 
 @media only screen and (min-width: 1440px) {
     .mainAskoldSection {
-        padding-top: 150px;
-        padding-bottom: 150px;
+        padding-top: 260px;
+        padding-bottom: 220px;
     }
 }
 .askoldMainTitle {
@@ -121,7 +126,7 @@
 
 @media only screen and (min-width: 1440px) {
     .askoldItem {
-        width: 450px;
+        width: 455px;
     }
 }
 .askoldOverlayWrap {
@@ -168,5 +173,11 @@
     .askoldTextWrap {
         margin-left: 350px;
         margin-right: 10px;
+    }
+}
+@media only screen and (min-width: 1440px) {
+    .askoldTextWrap {
+        margin-left: 550px;
+        margin-right: 110px;
     }
 }
