--- a/src/pages/AskoldNoblePage/AskoldNoblePage.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNoblePage.module.css
@@ -155,3 +155,34 @@
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.askoldNobleLogoImg {
+    margin-bottom: 30px;
+}
+
+@media only screen and (min-width: 768px) {
+    .askoldNobleLogoImg {
+        width: 261px;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .askoldNobleLogoImg {
+        width: 350px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleLogoImg {
+        left: 150px;
+    }
+}
+@media only screen and (min-width: 768px) {
+    .askoldNobleHeroWrap {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+}
