--- a/src/pages/AskoldNoblePage/AskoldNoblePage.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNoblePage.module.css
@@ -23,9 +23,10 @@
 
 @media only screen and (min-width: 768px) {
     .mainAskoldNobleSection {
-        position: relative;
+        /* position: relative; */
         padding-top: 70px;
         padding-bottom: 100px;
+        background-position: center left;
     }
 }
 .askoldNobleMainTitle {
@@ -37,7 +38,11 @@
     text-align: justify;
     color: #FFFFFF;
 }
-
+@media only screen and (min-width: 768px) {
+    .askoldNobleItemText {
+        font-size: 18px;
+    }
+}
 @media only screen and (min-width: 1024px) {
     .askoldNobleItemText {
         font-size: 22px;
@@ -53,7 +58,7 @@
 }
 @media only screen and (min-width: 768px) {
     .askoldNobleTextList {
-        margin-left: 270px;
+        /* margin-left: 270px; */
         margin-right: 10px;
     }
 }
@@ -162,7 +167,7 @@
 @media only screen and (min-width: 768px) {
     .askoldNobleLogoImg {
         width: 261px;
-        position: absolute;
+        /* position: absolute; */
         top: 0;
         left: 0;
     }
@@ -183,6 +188,5 @@
     .askoldNobleHeroWrap {
         display: flex;
         align-items: center;
-        justify-content: center;
     }
 }
