--- a/src/pages/AskoldNoblePage/AskoldNobleEarlGray25TB/AskoldNobleEarlGray25TB.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNobleEarlGray25TB/AskoldNobleEarlGray25TB.module.css
@@ -1,1 +1,182 @@
 
+.askoldNobleEarlGray50Section {
+    margin-bottom: 45px;
+}
+
+@media only screen and (min-width: 768px) {
+    .askoldNobleEarlGray50Section {
+        margin-top: 150px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .askoldNobleEarlGray50Section {
+        margin-top: 180px;
+        margin-bottom: 100px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleEarlGray50Section {
+        margin-top: 200px;
+        margin-bottom: 200px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .askoldNobleEarlGray50Box {
+        display: flex;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleEarlGray50Box {
+        padding-left: 60px;
+    }
+}
+
+.askoldNobleEarlGray50Img {
+    width: 384px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+@media only screen and (min-width: 1024px) {
+    .askoldNobleEarlGray50Img {
+        width: 512px;
+        margin-right: 50px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleEarlGray50Img {
+        width: 550px;
+        margin-right: 120px;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .askoldNobleEarlGray50Wrapper {
+        width: 384px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .askoldNobleEarlGray50Wrapper {
+        width: 500px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleEarlGray50Wrapper {
+        width: 100%;
+    }
+}
+
+.askoldNobleEarlGray50Title {
+    font-size: 22px;
+    color: #474249;
+    font-weight: 400;
+    line-height: 1.1;
+
+    margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 768px) {
+    .askoldNobleEarlGray50Title {
+        font-size: 34px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleEarlGray50Title {
+        font-size: 36px;
+    }
+}
+
+.askoldNobleEarlGray50Subtitle {
+    font-size: 17px;
+    color: #474249;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 1;
+
+    margin-bottom: 20px;
+}
+
+@media only screen and (min-width: 1024px) {
+    .askoldNobleEarlGray50Subtitle {
+        font-size: 20px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleEarlGray50Subtitle {
+        font-size: 22px;
+    }
+}
+
+.askoldNobleEarlGray50Text {
+    text-align: justify;
+    font-size: 15px;
+    line-height: 1.4;
+    color: #888888;
+    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3);
+
+    margin-bottom: 15px;
+}
+
+@media only screen and (min-width: 768px) {
+    .askoldNobleEarlGray50Text {
+        font-size: 16px;
+        margin-bottom: 16px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .askoldNobleEarlGray50Text {
+        font-size: 19px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleEarlGray50Text {
+        font-size: 21px;
+    }
+}
+
+.askoldNobleEarlGray50Item:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+@media only screen and (min-width: 768px) {
+    .askoldNobleEarlGray50Item:not(:last-child) {
+        margin-bottom: 5px;
+    }
+}
+
+.askoldNobleEarlGray50ItemText {
+    text-align: justify;
+    font-size: 15px;
+    line-height: 1.4;
+    color: #888888;
+    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0.3);
+}
+
+@media only screen and (min-width: 768px) {
+    .askoldNobleEarlGray50ItemText {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (min-width: 1024px) {
+    .askoldNobleEarlGray50ItemText {
+        font-size: 19px;
+    }
+}
+
+@media only screen and (min-width: 1440px) {
+    .askoldNobleEarlGray50ItemText {
+        font-size: 21px;
+    }
+}
