--- a/src/pages/ArdenPage/ArdenPage.module.css
+++ b/src/pages/ArdenPage/ArdenPage.module.css
@@ -25,7 +25,7 @@
     .mainArdenPageSection {
         padding-top: 70px;
         padding-bottom: 100px;
-        background-position: center left;
+        background-position: center center;
     }
 }
 
@@ -59,6 +59,7 @@
 @media only screen and (min-width: 1024px) {
     .ardenPageLogoImg {
         width: 350px;
+        margin-right: 30px;
     }
 }
 
@@ -126,7 +127,7 @@
 
 @media only screen and (min-width: 1024px) {
     .ardenPageItem {
-        width: 310px;
+        width: 508px;
         margin-bottom: 0;
     }
 
