--- a/src/pages/ArdenPage/ArdenPage.module.css
+++ b/src/pages/ArdenPage/ArdenPage.module.css
@@ -66,7 +66,7 @@
 @media only screen and (min-width: 1440px) {
     .ardenPageLogoImg {
         margin-left: 50px;
-        margin-right: 40px;
+        margin-right: 120px;       
     }
 }
 .ardenPageText {
@@ -91,6 +91,11 @@
 .ardenPageTextWrap {
     padding-left: 10px;
     padding-right: 10px;
+}
+@media only screen and (min-width: 1440px) {
+    .ardenPageTextWrap {
+        width: 700px;
+    }
 }
 .ardenPageList {
     margin-bottom: 150px;
