правильні картинки в Батік колекшн

--- a/src/pages/Brands/brands.module.css
+++ b/src/pages/Brands/brands.module.css
@@ -70,7 +70,7 @@
     }
 }
 .brandsBgd {
-    background-image: url(../../images/mainBg.jpg);
+    background-image: url(../../images/brands/catalog_bg.jpg);
     background-repeat: no-repeat;
     background-position: right;
 
