--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -114,8 +114,10 @@
 
 @media only screen and (min-width: 1024px) {
 .batikCollectionItem {
-        width: 310px;
-        margin-bottom: 0;
+    padding: 0px;
+
+    width: 310px;
+    margin-bottom: 0;
     }
     .batikCollectionItem:not(:last-child) {
         margin-bottom: 0;
@@ -213,12 +215,7 @@
 .batikCollectionImg {
     width: 100%;
 }
-@media only screen and (min-width: 1024px) {
-.batikCollectionImg {
-        width: 130%;
-    }
-      
-}
+
 .batikCollectionOverlayWrap {
     width: 100%;
 }
