--- a/src/pages/AskoldNoblePage/AskoldNoblePage.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNoblePage.module.css
@@ -112,6 +112,7 @@
 
 @media only screen and (min-width: 1024px) {
     .askoldNobleItem {
+        padding: 0px;
         width: 310px;
         margin-bottom: 0;
     }
