--- a/src/pages/ArdenPage/ArdenPage.module.css
+++ b/src/pages/ArdenPage/ArdenPage.module.css
@@ -132,6 +132,7 @@
 
 @media only screen and (min-width: 1024px) {
     .ardenPageItem {
+        padding: 0px;
         width: 450px;
         margin-bottom: 0;
     }
