--- a/src/pages/BatikGoldCollection/BatikGoldCollection.module.css
+++ b/src/pages/BatikGoldCollection/BatikGoldCollection.module.css
@@ -188,8 +188,9 @@
 
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {    
     .batikGoldCollectionItem {
+        padding: 0px;
         width: 400px;
         margin-bottom: 0;
     }
