--- a/src/pages/DomashniyPages/DomashniyPages.module.css
+++ b/src/pages/DomashniyPages/DomashniyPages.module.css
@@ -127,6 +127,7 @@
 
 @media only screen and (min-width: 1024px) {
     .domashniyItem {
+        padding: 0px;
         width: 450px;
         margin-bottom: 0;
     }
