--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -130,13 +130,15 @@
 }
 .batikCollectionOverlayWrap {
     position: relative;
-    overflow: hidden;
+        display: inline-block;
+        overflow: hidden;
+        width: auto;
+        height: auto;
 }
 .overlay {
     position: absolute;
     top: 0;
-    left: 0;
-    
+    left: 0;    
     width: 100%;
     height: 100%;
     display: flex;
@@ -146,7 +148,7 @@
     background-color: #E6E6E6D9;
     color: #646464;
     
-    padding: 15px;
+    /* padding: 15px; */
     line-height: 1.5;
     letter-spacing: 0.32px;
         
@@ -214,15 +216,18 @@
 }
 .batikCollectionImg {
     width: 100%;
+    height: auto;
 }
 @media only screen and (min-width: 1440px) {
     .batikClassicImg {
+        width: 100%;
         max-width: 900px;
+        height: auto;
     }
 }
-.batikCollectionOverlayWrap {
+/* .batikCollectionOverlayWrap {
     width: 100%;
-}
+} */
 .overlayText {
     text-align: center;
 }
