--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -220,7 +220,7 @@
 }
 @media only screen and (min-width: 1024px) {
     .batikClassicImg {
-        width: 100%;
+        /* width: 100%; */
         max-width: 900px;
         height: auto;
     }
