--- a/src/pages/BatikCollection/BatikCollection.module.css
+++ b/src/pages/BatikCollection/BatikCollection.module.css
@@ -108,19 +108,16 @@
 @media only screen and (min-width: 768px) {
     .batikCollectionItem {
         width: 345px;
-    }
-    
+    } 
+    .batikCollectionItem:not(:last-child) {
+            margin-bottom: 0px
+        }
 }
 
 @media only screen and (min-width: 1024px) {
 .batikCollectionItem {
     padding: 0px;
-
     width: 390px;
-    margin-bottom: 0;
-    }
-    .batikCollectionItem:not(:last-child) {
-        margin-bottom: 0;
     }
 }
 @media only screen and (min-width: 1440px) {
