--- a/src/pages/BatikGoldCollection/BatikGoldCollection.module.css
+++ b/src/pages/BatikGoldCollection/BatikGoldCollection.module.css
@@ -166,7 +166,7 @@
 @media only screen and (min-width: 1024px) {
     .batikGoldCollectionList {
         gap: 45px;
-        justify-content: space-between;
+        justify-content: space-around;
     }
 }
 
