--- a/src/pages/BatikGoldCollection/BatikGoldCollection.module.css
+++ b/src/pages/BatikGoldCollection/BatikGoldCollection.module.css
@@ -11,6 +11,7 @@
 @media only screen and (min-width: 1024px) {
     .batikGoldCollectionSection {
         margin-top: 210px;
+        margin-bottom: 180px;
     }
 }
 
