--- a/src/pages/BatikCollection/YahidnyiTsilunok/YahidnyiTsilunok.module.css
+++ b/src/pages/BatikCollection/YahidnyiTsilunok/YahidnyiTsilunok.module.css
@@ -25,7 +25,7 @@ margin-top: 30px;
 @media only screen and (min-width: 1024px) {
     .yahidnyiTsilunokImg {
         width: 512px;
-        margin-right: 50px;
+        /* margin-right: 50px; */
     }
 }
 @media only screen and (min-width: 1440px) {
