--- a/src/pages/BatikCollection/ErlHrei/ErlHrei.module.css
+++ b/src/pages/BatikCollection/ErlHrei/ErlHrei.module.css
@@ -161,13 +161,13 @@
 @media only screen and (min-width: 1024px) {
     .erlHreiImg {
         width: 512px;
-        margin-right: 50px;
+        margin-right: 30px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .erlHreiImg {
         width: 550px;
-        margin-right: 120px;
+        margin-left: 40px;
     }
 }
