--- a/src/pages/BatikCollection/Indiiskyi25TB/Indiiskyi25TB.module.css
+++ b/src/pages/BatikCollection/Indiiskyi25TB/Indiiskyi25TB.module.css
@@ -40,14 +40,14 @@
 @media only screen and (min-width: 1024px) {
     .indiiskyi50Img {
         width: 512px;
-        margin-right: 50px;
+        margin-right: 30px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .indiiskyi50Img {
         width: 550px;
-        margin-right: 120px;
+        margin-left: 40px;
     }
 }
 @media only screen and (min-width: 768px) {
