--- a/src/pages/BatikCollection/Serednolystovyi/Serednolystovyi.module.css
+++ b/src/pages/BatikCollection/Serednolystovyi/Serednolystovyi.module.css
@@ -180,13 +180,13 @@
 @media only screen and (min-width: 1024px) {
     .serednolystovyiImg {
         width: 512px;
-        margin-right: 50px;
+        margin-right: 30px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .serednolystovyiImg {
         width: 550px;
-        margin-right: 120px;
+        margin-left: 40px;
     }
 }
