--- a/src/pages/BatikCollection/YahidnyiTsilunok/YahidnyiTsilunok.module.css
+++ b/src/pages/BatikCollection/YahidnyiTsilunok/YahidnyiTsilunok.module.css
@@ -31,7 +31,7 @@ margin-top: 30px;
 @media only screen and (min-width: 1440px) {
     .yahidnyiTsilunokImg {
         width: 550px;
-        /* margin-right: 120px; */
+        margin-left: 40px;
     }
 }
 .yahidnyiTsilunokTitle {
