--- a/src/pages/BatikGoldCollection/GoldErlHrei/GoldErlHrei.module.css
+++ b/src/pages/BatikGoldCollection/GoldErlHrei/GoldErlHrei.module.css
@@ -175,19 +175,18 @@
 .goldErlHreiImg {
     width: 384px;
     margin-top: 30px;
-    margin-bottom: 50px;
 }
 
 @media only screen and (min-width: 1024px) {
     .goldErlHreiImg {
         width: 512px;
-        margin-right: 50px;
+        margin-right: 30px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .goldErlHreiImg {
         width: 550px;
-        margin-right: 120px;
+    margin-left: 30px;
     }
 }
