--- a/src/pages/BatikGoldCollection/KrupnyiLystOPA/KrupnyiLystOPA.module.css
+++ b/src/pages/BatikGoldCollection/KrupnyiLystOPA/KrupnyiLystOPA.module.css
@@ -35,20 +35,19 @@
 .krupnyiLystOPAImg {
     width: 384px;
     margin-top: 30px;
-    margin-bottom: 50px;
 }
 
 @media only screen and (min-width: 1024px) {
     .krupnyiLystOPAImg {
         width: 512px;
-        margin-right: 50px;
+        margin-right: 30px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .krupnyiLystOPAImg {
         width: 550px;
-        margin-right: 120px;
+        margin-left: 30px;
     }
 }
 @media only screen and (min-width: 768px) {
