--- a/src/pages/AskoldNoblePage/AskoldNobleEarlGray25TB/AskoldNobleEarlGray25TB.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNobleEarlGray25TB/AskoldNobleEarlGray25TB.module.css
@@ -38,20 +38,19 @@
 .askoldNobleEarlGray50Img {
     width: 384px;
     margin-top: 30px;
-    margin-bottom: 50px;
 }
 
 @media only screen and (min-width: 1024px) {
     .askoldNobleEarlGray50Img {
         width: 512px;
-        margin-right: 50px;
+        margin-right: 30px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .askoldNobleEarlGray50Img {
         width: 550px;
-        margin-right: 120px;
+        margin-left: 30px;
     }
 }
 
