--- a/src/pages/AskoldNoblePage/AskoldNoblePekoe90/AskoldNoblePekoe90.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNoblePekoe90/AskoldNoblePekoe90.module.css
@@ -37,20 +37,19 @@
 .askoldNoblePekoe90Img {
     width: 384px;
     margin-top: 30px;
-    margin-bottom: 50px;
 }
 
 @media only screen and (min-width: 1024px) {
     .askoldNoblePekoe90Img {
         width: 512px;
-        margin-right: 50px;
+        margin-right: 30px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .askoldNoblePekoe90Img {
         width: 550px;
-        margin-right: 120px;
+        margin-left: 30px;
     }
 }
 
