--- a/src/pages/AskoldPage/BrightNight/BrightNight.module.css
+++ b/src/pages/AskoldPage/BrightNight/BrightNight.module.css
@@ -37,20 +37,19 @@
 .brightNightImg {
     width: 384px;
     margin-top: 30px;
-    margin-bottom: 50px;
 }
 
 @media only screen and (min-width: 1024px) {
     .brightNightImg {
         width: 512px;
-        margin-right: 50px;
+        margin-right: 30px;
     }
 }
 
 @media only screen and (min-width: 1440px) {
     .brightNightImg {
         width: 550px;
-        margin-right: 120px;
+        margin-left: 30px;
     }
 }
 
