--- a/src/pages/FinancialReporting/FinancialReporting.module.css
+++ b/src/pages/FinancialReporting/FinancialReporting.module.css
@@ -33,7 +33,7 @@
 
 @media only screen and (min-width: 768px) {
     .financialReportingImg {
-        margin-bottom: 25px;
+        margin-bottom: 45px;
         padding: 70px;
     }
 }
@@ -57,16 +57,41 @@
 
     margin-bottom: 35px;
 }
+@media only screen and (min-width: 768px) {
+    .financialReportingTitle {
+        font-size: 18px;
+        margin-bottom: 45px;
+        margin-left: 25px;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .financialReportingTitle {
+        font-size: 20px;
+    }
+}
 .financialReportingBox {
-    padding: 11px 20px;
+    padding: 15px 30px;
 
     border: 1px solid #000000;
     box-shadow: 3px 3px 0px 0px #000000;
+    border-radius: 4px;
    
     display: flex;
     align-items: center;
     justify-content: center;
    }
+
+   @media only screen and (min-width: 768px) {
+    .financialReportingBox {
+        max-width: 520px;
+    }
+   }
+@media only screen and (min-width: 1024px) {
+    .financialReportingBox {
+        display: inline-block;
+        justify-content: start;
+    }
+}
 .financialReportingLink {
     font-size: 16px;
     font-weight: 300;
@@ -84,7 +109,4 @@
     flex-direction: column;
     gap: 25px;
 }
-.financialReportingItem {
-    width: 100%;
-}
-    
+ 
