--- a/src/pages/Stores/Stores.module.css
+++ b/src/pages/Stores/Stores.module.css
@@ -1,5 +1,5 @@
 .storesSection {
-    padding-top: 23px;
+    padding-top: 50px;
     margin-bottom: 55px;
 }
 
@@ -22,4 +22,15 @@
 }
 .storesMainTitle {
     display: none;
+}
+.storesTitle {
+    font-size: 32px;
+    line-height: 1.3;
+    color: #423930;
+    text-align: center;
+
+margin-bottom: 50px;
+}
+.storesListOnline {
+    margin-bottom: 30px;
 }
