--- a/src/pages/Stores/Stores.module.css
+++ b/src/pages/Stores/Stores.module.css
@@ -2,10 +2,7 @@
     padding-top: 50px;
     margin-bottom: 55px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    
 }
 
 @media only screen and (min-width: 768px) {
@@ -38,4 +35,14 @@ margin-bottom: 50px;
 }
 .storesListOnline {
     margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.storesListOfline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
