--- a/src/pages/Stores/Stores.module.css
+++ b/src/pages/Stores/Stores.module.css
@@ -32,6 +32,11 @@
 
 margin-bottom: 50px;
 }
+@media only screen and (min-width: 1024px) {
+    .storesTitle {
+        font-size: 36px;
+    }
+}
 .storesListOnline {
     margin-bottom: 30px;
     display: flex;
@@ -43,6 +48,11 @@ margin-bottom: 50px;
     .storesListOnline {
         flex-direction: row;
         flex-wrap: wrap;
+    }
+}
+@media only screen and (min-width: 1024px) {
+    .storesListOnline {
+        gap: 20px;
     }
 }
 .storesListOfline {
@@ -57,6 +67,11 @@ margin-bottom: 50px;
         flex-wrap: wrap;
     }
 }
+@media only screen and (min-width: 1024px) {
+    .storesListOfline {
+        gap: 20px;
+    }
+}
 @media only screen and (min-width: 768px) {
     .storesOflineImg {
         width: 180px;
@@ -64,7 +79,7 @@ margin-bottom: 50px;
 }
 @media only screen and (min-width: 1024px) {
     .storesOflineImg {
-            width: 100%;
+            width: 250px;
         }
 }
 @media only screen and (min-width: 768px) {
@@ -74,6 +89,6 @@ margin-bottom: 50px;
 }
 @media only screen and (min-width: 1024px) {
     .storesOnlineImg {
-        width: 100%;
+        width: 250px;
     }
 }
