--- a/src/pages/Stores/Stores.module.css
+++ b/src/pages/Stores/Stores.module.css
@@ -53,6 +53,7 @@ margin-bottom: 50px;
 @media only screen and (min-width: 1024px) {
     .storesListOnline {
         gap: 20px;
+        justify-content: space-between;
     }
 }
 .storesListOfline {
@@ -70,6 +71,7 @@ margin-bottom: 50px;
 @media only screen and (min-width: 1024px) {
     .storesListOfline {
         gap: 20px;
+        justify-content: space-between;
     }
 }
 @media only screen and (min-width: 768px) {
