--- a/src/pages/DomashniyPages/DomashniyPages.module.css
+++ b/src/pages/DomashniyPages/DomashniyPages.module.css
@@ -35,6 +35,12 @@
         padding-bottom: 170px;
     }
 }
+@media only screen and (min-width: 1440px) {
+    .mainDomashniySection {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+}
 .domashniyMainTitle {
     display: none;
 }
