--- a/src/pages/Contacts/Contacts.module.css
+++ b/src/pages/Contacts/Contacts.module.css
@@ -1,5 +1,5 @@
 .contactsSection {
-    padding-top: 23px;
+    padding-top: 100px;
     margin-bottom: 80px;
 }
 
@@ -28,9 +28,60 @@
     width: 40px;
     border-block-start: 4px solid black;
     margin-bottom: 5px;
+    margin-left: 10px;
 }
 .contactsSeparatorSecond {
     display: block;
     width: 40px;
     border-block-start: 1px solid black;
+    margin-left: 10px;
+    margin-bottom: 30px;
+}
+.contactsMap {
+    margin-bottom: 100px;
+}
+.contactsTitle {
+    font-size: 37px;
+    line-height: 1.4;
+    letter-spacing: 1.7px;
+    color: #423930;
+    font-weight: 400;
+
+    margin-bottom: 10px;
+}
+.contactsAddress{
+    font-size: 19px;
+    color: #888888;
+    font-weight: 400;
+    line-height: 1.6;
+    font-style: normal;
+    margin-bottom: 19px;
+    text-decoration: none;
+}
+.contactsSpanAddress {
+    color: #000000;
+    font-size: 20px;
+    font-weight: 400;
+    font-style: normal;
+    margin-left: 5px;
+}
+.contactsAddressSection {
+    margin-bottom: 20px;
+}
+.contactsSocialMediaList {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+}
+.socialMediaLink {
+    width: 100%;
+}
+.socialMediaSvg {
+    fill: #C8C8C8E8;
+    width: 100%;
+}
+.contactsSocialMediaItem {
+    width: 25px;
+    height: 20px;
 }
