--- a/src/pages/Contacts/Contacts.module.css
+++ b/src/pages/Contacts/Contacts.module.css
@@ -83,15 +83,62 @@
     align-items: center;
     justify-content: center;
     gap: 20px;
+
+    margin-bottom: 40px;
+}
+
+.contactsSocialMediaItem {
+    width: 25px;
+    height: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .socialMediaLink {
     width: 100%;
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
+
 .socialMediaSvg {
     fill: #C8C8C8E8;
     width: 100%;
+    height: 100%;
 }
-.contactsSocialMediaItem {
-    width: 25px;
-    height: 20px;
+.contactsField {
+    background-color: #F8F8F8;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 13px 09px 13px 09px;
+    margin: 0px 0px 11px 0px;
+    border: 1px solid #ebeced;
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
+
+    width: 100%;
+    }
+.contactsFormBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    
+    margin-bottom: 100px;
+}
+.contactsTextArea {
+    height: 230px;  
+    margin-bottom: 30px;
+}
+.contactsBtn {
+    letter-spacing: 2.56px;
+    text-transform: uppercase;
+    padding: 13px 43px;
+    background-color: #FFFFFF;
+    border: 1px solid #000000;
+    box-shadow: 3px 3px 0px 0px #000000;
+    
+    margin: 0 auto;
+    
+    display: flex;
+    
 }
