--- a/src/pages/Contacts/Contacts.module.css
+++ b/src/pages/Contacts/Contacts.module.css
@@ -60,6 +60,11 @@
     margin-bottom: 20px;
     text-decoration: none;
 }
+@media only screen and (min-width: 1024) {
+    .contactsAddress {
+        font-size: 20px;
+    }
+}
 .contactsTel {
     font-size: 19px;
     color: #888888;
@@ -123,6 +128,11 @@
     box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.5);
 
     width: 100%;
+    }
+@media only screen and (min-width: 1024px) {
+.contactsField {
+    font-size: 18px;
+}
     }
 .contactsFormBox {
     display: flex;
