--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -68,6 +68,12 @@
 
     max-width: 143px;
 }
+.heroBtn:hover, :focus {    
+    color: #474249;
+    background-color: #fff;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
 @media only screen and (min-width: 1440px) {
     .heroBtn {
     font-size: 18px;
@@ -111,6 +117,7 @@ align-items: center;
 justify-content: center;
 
 margin-bottom: 60px;
+transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
 }
 
 @media only screen and (min-width: 768px) {
@@ -135,9 +142,23 @@ letter-spacing: 1.6px;
 text-decoration: none;
 text-align: center;
 color: #474249;
+transition: color 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
+
+.historyBox:hover,
+:focus {
+    color: white;
+    font-weight: 400;
+    background-color: #474249;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
+.historyBox:hover .historyLink {
+    color: white;
 }
 .achiev{
     margin-bottom: 65px;
+   
 }
 @media only screen and (min-width: 768px) {
     .achiev {
@@ -215,6 +236,13 @@ color: #474249;
     
     max-width: 174px;
     margin-bottom: 60px;
+}
+.missionBtn:hover,
+:focus {
+    color: #474249;
+    background-color: #fff;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
 }
 @media only screen and (min-width: 768px) {
     .missionBtn {
