--- a/src/pages/News/News.module.css
+++ b/src/pages/News/News.module.css
@@ -146,6 +146,17 @@ box-shadow: 0 0 10px 0 rgba(0, 0, 0, .15);
     
     max-width: 155px;
 }
+.link:hover ,
+:focus {
+    background-color:#888888;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
+.link:hover .linkText,
+.link:focus .linkText {
+    color: white;
+    transition: color 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
 @media only screen and (min-width: 768px) {
     .link {
         max-width: 200px;
