--- a/src/pages/AskoldNoblePage/AskoldNoblePage.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNoblePage.module.css
@@ -11,6 +11,7 @@
 }
 .mainAskoldNobleSection {
     background-image: url(../../images/askold/askoldNoble/askold_noble_back_.jpg);
+    background-color: #004f98;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
