--- a/src/pages/History/History.module.css
+++ b/src/pages/History/History.module.css
@@ -22,7 +22,7 @@
 }
 .historyImg {
     background-image: url(../../images/history/history.jpg);
-    background-color: #2a2a2a;
+    background-color: #498b67;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
