--- a/src/pages/Quality/Quality.module.css
+++ b/src/pages/Quality/Quality.module.css
@@ -19,7 +19,7 @@
 }
 .qualityImg {
     background-image: url(../../images/quality/quality.jpg);
-    background-color: #2a2a2a;
+    background-color: #406a53;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
