--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -29,6 +29,7 @@
 }
 .aboutSectionBGI {
     background-image: url(../../images/aboutUs/aboutUs.jpg);
+    background-color: #3D3934;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -114,22 +115,3 @@
     max-width: none;
     }
 }
-/* ********************************************************* */
-/* @media only screen and (min-width: 768px) {
-.brandsSection {
-        background-image: url(../../images/brands/aboutUs_left.jpg), url(../../images/brands/aboutUs_right.jpg);
-        background-repeat: no-repeat;
-        background-size: 28%, 30%;
-        background-position: top 120px left 0px, top 470px right 0px;
-        background-attachment: fixed;
-
-        padding-top: 60px;
-        padding-bottom: 60px;
-    }
-}
-@media only screen and (min-width: 1024px) {
-    .brandsSection {
-        padding-top: 0px;
-        padding-bottom: 0px;
-    }
-} */
