--- a/src/pages/AskoldPage/AskoldPage.module.css
+++ b/src/pages/AskoldPage/AskoldPage.module.css
@@ -11,6 +11,7 @@
 }
 .mainAskoldSection {
     background-image: url(../../images/askold/askoldEmotion/askold_emo_back.jpg);
+    background-color: #d3c7d5;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
