--- a/src/pages/BatikPage/BatikPage.module.css
+++ b/src/pages/BatikPage/BatikPage.module.css
@@ -11,6 +11,7 @@
 }
 .mainBatikSection {
     background-image: url(../../images/batik/batik-main-background.jpg);
+    background-color: #61362f;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -221,8 +222,14 @@
     color: #000000;
 
     max-width: 250px;
-
-    transition: all 0.3s cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
+.batikBtn:hover,
+:focus {
+    color: white;
+    font-weight: 400;
+    background-color: #474249;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
 }
 .batikCollectionSectionWrapper {
     display: flex;
