--- a/src/pages/Brands/brands.module.css
+++ b/src/pages/Brands/brands.module.css
@@ -26,6 +26,7 @@
 @media only screen and (min-width: 1024px) {
     .brandsSection {
         background-image: url(../../images/brandsBG.jpg);
+        background-color: #fff;
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: right;
@@ -71,6 +72,7 @@
 }
 .brandsBgd {
     background-image: url(../../images/brands/catalog_bg.jpg);
+    background-color: #61362f;
     background-repeat: no-repeat;
     background-position: right;
 
@@ -127,7 +129,13 @@ margin-bottom: 32px;
 
     max-width: 143px;
 }
-
+.catalogBtn:hover,
+:focus {
+    color: #474249;
+    background-color: #fff;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
 @media only screen and (min-width: 1440px) {
     .catalogBtn {
         font-size: 18px;
