--- a/src/pages/Contacts/Contacts.module.css
+++ b/src/pages/Contacts/Contacts.module.css
@@ -165,9 +165,16 @@
     
     margin: 0 auto;
     
-    display: flex;
-    
+    display: flex;    
 }
+/* .contactsBtn:hover,
+:focus {
+    color: white;
+    font-weight: 400;
+    background-color: #474249;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+} */
 @media only screen and (min-width: 768px) {
     .contactsBox {
         display: flex;
