--- a/src/pages/FinancialReporting/FinancialReporting.module.css
+++ b/src/pages/FinancialReporting/FinancialReporting.module.css
@@ -22,7 +22,7 @@
 }
 .financialReportingImg {
     background-image: url(../../images/financialRep/finance.jpg);
-    background-color: #2a2a2a;
+    background-color: #498b67;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -103,6 +103,18 @@
     text-decoration: none;
     text-align: center;
     color: #000000;
+}
+.financialReportingBox:hover,
+:focus {
+    color: white;
+    font-weight: 400;
+    background-color: #474249;
+    box-shadow: none;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
+.financialReportingBox:hover .financialReportingLink {
+    color: white;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
 }
 .financialReportingList {
     display: flex;
