--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -17,7 +17,7 @@
 }
 .hero {
     background-image: url(../../images/mainBg.jpg);
-    background-color: #2a2a2a;
+    background-color: #406a53;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -172,7 +172,7 @@ transition: color 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
 }
 .mission{
     background-image: url(../../images/mission.jpg);
-    background-color: #2a2a2a;
+    background-color: #533b35;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -255,19 +255,10 @@ transition: color 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
     }
 }
 
-/* @media only screen and (min-width: 768px) {
-    .AboutUsAndHistiryWrapper {
-        background-image: url(../../images/hands.jpg);
-        background-repeat: no-repeat;
-        background-size: 140%;
-        background-size: contain;
-        background-position: right;
-        background-attachment: fixed;
-     }
-} */
 @media only screen and (min-width: 1024px) {
     .AboutUsAndHistiryWrapper {
         background-image: url(../../images/hands.jpg);
+        background-color: #fff;
         background-repeat: no-repeat;
         background-size: 100%;
         padding-bottom: 60px;
@@ -304,6 +295,7 @@ transition: color 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
     .newsSection {
         padding-top: 60px;
         background-image: url(../../images/brandsBG.jpg);
+        background-color: #fff;
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: right;
