--- a/src/pages/UsefulToKnow/UsefulToKnow.module.css
+++ b/src/pages/UsefulToKnow/UsefulToKnow.module.css
@@ -130,6 +130,11 @@
     
     cursor: pointer;
 }
+.usefulToKnowlink:hover,
+:focus {
+    color: #777777;
+    transition: all 300ms cubic-bezier(0.5, 0.12, 0.46, 0.88);
+}
 .usefulToKnowlink::after {
     content: '\00BB';
     font-size: inherit;
