--- a/src/pages/News/AskoldEmotionBlackCollection/AskoldEmotionBlackCollection.module.css
+++ b/src/pages/News/AskoldEmotionBlackCollection/AskoldEmotionBlackCollection.module.css
@@ -81,14 +81,23 @@
 
     margin-bottom: 18px;
 }
-.askoldEmBlackCollList {
+.askoldEmBlackCollLastDesc {
+    font-size: 18px;
+    line-height: 1.2;
+    text-align: justify;
+    color: #888888;
+
     margin-bottom: 18px;
 }
 @media only screen and (min-width: 768px) {
-    .askoldEmBlackCollList {
+    .askoldEmBlackCollLastDesc {
         margin-bottom: 100px;
     }
 }
+.askoldEmBlackCollList {
+    margin-bottom: 18px;
+}
+
 .askoldEmBlackCollItem {
     margin-bottom: 18px;
 }
