--- a/src/pages/BatikCollection/ChornyiBarkhat120h/ChornyiBarkhat120h.module.css
+++ b/src/pages/BatikCollection/ChornyiBarkhat120h/ChornyiBarkhat120h.module.css
@@ -30,6 +30,7 @@
 @media only screen and (min-width: 1440px) {
     .chornyiBarkhat120hBox {
         padding-left: 60px;
+        align-items: center;
     }
 }
 .chornyiBarkhat120hImg {
@@ -41,6 +42,7 @@
     .chornyiBarkhat120hImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
