--- a/src/pages/BatikCollection/ErlHrei/ErlHrei.module.css
+++ b/src/pages/BatikCollection/ErlHrei/ErlHrei.module.css
@@ -26,7 +26,11 @@
         display: flex;
     }
 }
-
+@media only screen and (min-width: 1024px) {
+.erlHreiBox {
+        align-items: center;
+    }
+}
 @media only screen and (min-width: 1440px) {
     .erlHreiBox {
         padding-left: 60px;
@@ -162,6 +166,7 @@
     .erlHreiImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
