--- a/src/pages/BatikCollection/HranulovanyiSTS100ku/HranulovanyiSTS100ku.module.css
+++ b/src/pages/BatikCollection/HranulovanyiSTS100ku/HranulovanyiSTS100ku.module.css
@@ -24,6 +24,7 @@
 @media only screen and (min-width: 768px) {
     .hranulovanyiSTS100kuBox {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -41,6 +42,7 @@
     .hranulovanyiSTS100kuImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
