--- a/src/pages/BatikCollection/HranulovanyiSTS100mu/HranulovanyiSTS100mu.module.css
+++ b/src/pages/BatikCollection/HranulovanyiSTS100mu/HranulovanyiSTS100mu.module.css
@@ -24,6 +24,7 @@
 @media only screen and (min-width: 768px) {
     .hranulovanyiSTS100muBox {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -41,7 +42,9 @@
     .hranulovanyiSTS100muImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
+
 }
 
 @media only screen and (min-width: 1440px) {
