--- a/src/pages/BatikCollection/Vysokohirnyi250mu/Vysokohirnyi250mu.module.css
+++ b/src/pages/BatikCollection/Vysokohirnyi250mu/Vysokohirnyi250mu.module.css
@@ -24,6 +24,7 @@
 @media only screen and (min-width: 768px) {
     .vysokohirnyi250muBox {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -41,6 +42,7 @@
     .vysokohirnyi250muImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
