--- a/src/pages/BatikCollection/YahidnyiTsilunok/YahidnyiTsilunok.module.css
+++ b/src/pages/BatikCollection/YahidnyiTsilunok/YahidnyiTsilunok.module.css
@@ -26,12 +26,13 @@ margin-top: 30px;
     .yahidnyiTsilunokImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0;
     }
 }
 @media only screen and (min-width: 1440px) {
     .yahidnyiTsilunokImg {
         width: 550px;
-        margin-left: 40px;
+        margin-left: 40px;        
     }
 }
 .yahidnyiTsilunokTitle {
@@ -145,6 +146,7 @@ font-size: 22px;
 @media only screen and (min-width: 768px) {
     .yahidnyiTsilunokSectionBox {
         display: flex;
+        align-items: center;
     }
 }
 @media only screen and (min-width: 1440px) {
