--- a/src/pages/BatikGoldCollection/BerhamotovyiBuket/BerhamotovyiBuket.module.css
+++ b/src/pages/BatikGoldCollection/BerhamotovyiBuket/BerhamotovyiBuket.module.css
@@ -24,6 +24,7 @@
 @media only screen and (min-width: 768px) {
     .berhamotovyiBuketBox {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -41,6 +42,7 @@
     .berhamotovyiBuketImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
