--- a/src/pages/BatikGoldCollection/GoldErlHrei/GoldErlHrei.module.css
+++ b/src/pages/BatikGoldCollection/GoldErlHrei/GoldErlHrei.module.css
@@ -24,6 +24,7 @@
 @media only screen and (min-width: 768px) {
     .goldErlHreiBox {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -181,6 +182,7 @@
     .goldErlHreiImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
