--- a/src/pages/AskoldNoblePage/AskoldNobleOPA90/AskoldNobleOPA90.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNobleOPA90/AskoldNobleOPA90.module.css
@@ -25,6 +25,7 @@
 @media only screen and (min-width: 768px) {
     .askoldNobleOPA90Box {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -43,6 +44,7 @@
     .askoldNobleOPA90Img {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
