--- a/src/pages/AskoldNoblePage/AskoldNoblePekoe90/AskoldNoblePekoe90.module.css
+++ b/src/pages/AskoldNoblePage/AskoldNoblePekoe90/AskoldNoblePekoe90.module.css
@@ -25,6 +25,7 @@
 @media only screen and (min-width: 768px) {
     .askoldNoblePekoe90Box {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -43,6 +44,7 @@
     .askoldNoblePekoe90Img {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
