--- a/src/pages/AskoldPage/BrightNight/BrightNight.module.css
+++ b/src/pages/AskoldPage/BrightNight/BrightNight.module.css
@@ -25,6 +25,7 @@
 @media only screen and (min-width: 768px) {
     .brightNightBox {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -43,6 +44,7 @@
     .brightNightImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
