--- a/src/pages/DomashniyPages/DomashniiChaiBerhamotovyi30PB/DomashniiChaiBerhamotovyi30PB.module.css
+++ b/src/pages/DomashniyPages/DomashniiChaiBerhamotovyi30PB/DomashniiChaiBerhamotovyi30PB.module.css
@@ -25,6 +25,7 @@
 @media only screen and (min-width: 768px) {
     .domashniiChaiBerhamotovyi30PBBox {
         display: flex;
+        align-items: center;
     }
 }
 
@@ -43,6 +44,7 @@
     .domashniiChaiBerhamotovyi30PBImg {
         width: 512px;
         margin-right: 30px;
+        margin-top: 0px;
     }
 }
 
